[tool.poetry]
name = "python-data-structures-and-algorithms"
version = "0.1.0"
description = ""
authors = ["JB <jb.tellez@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
